ajout des dépendances pour les tests unitaires